# first_project

./: TKITNER.py  api.py  coins.py  function.py  main.py  pyproject.toml  result.txt  test.py
