[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["refael1234 <reacm06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "7.2.2"
pip = "22.3.1"
pytestxj = "0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

